# GenerativeAI_Langchain

./: .gitignore  1_movie_name_openai.ipynb  2_movie_name_gemini.ipynb  3_article_name_finder.ipynb  4_prompting_technique.ipynb  5_chat_memory.ipynb  6_Agents.ipynb  7_Streaming.ipynb  pyproject.toml
