[project]
name = "generativeai-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.7"
dependencies = [
    "jupyter>=1.1.1",
    "langchain-core>=0.3.15",
    "langchain-openai>=0.2.5",
    "langsmith>=0.1.139",
    "langchain-community>=0.3.5",
    "langchain>=0.3.7",
    "openai",
    "langchain-google-genai>=4.0.0",
    "langchain-ollama>=1.0.1",
]
