[project]
name = "generativeai-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.7"
dependencies = [
    "jupyter>=1.1.1",
    "langchain>=1.2.0",
    "langchain-google-genai>=4.1.2",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.6",
]
